--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title:       Genvara's Blog
-email:       genvara@ttm.sh
-author:      Genvara
-description: "[insert generic description here]"
-baseurl:     ""
-url:         "http://genvara.github.io"
+title: Genvara's Blog
+email: genvara@ttm.sh
+author: Genvara
+description: "A blog."
+baseurl: "/blog"
+url: "http://genvara.github.io"
 date_format: "%b %-d, %Y"
 header_pages:
  - about.md
@@ -20,7 +20,7 @@ google_tag_manager:
 bing_verification:
 
 # Optional features
-animated:             false
+animated:             true
 show_related_posts:   false
 show_post_footers:    false
 show_social_icons:    true
@@ -29,7 +29,7 @@ enable_mathjax: false
 extended_fonts: false
 enable_anchorjs: false
 # Preview image for social media aka og:image and twitter:image
-post_preview_image: false
+post_preview_image: true
 
 # Facebook Page integration
 # (for instant articles and other stuff)
@@ -98,24 +98,24 @@ text:
     related_posts:  'Related Posts'
   index:
     coming_soon: 'Coming soon...'
-  contact:
-    email:    'Email Address'
-    content:  'What would you like to say?'
-    subject:  'New submission!'
-    submit:   'Say Hello'
-    ajax:
-      sending:  'sending..'
-      sent:     'Message sent!'
-      error:    'Error!'
-  thanks: 'Thanks for contacting us. We will reply as soon as possible.'
+  #contact:
+   # email:    'Email Address'
+    #content:  'What would you like to say?'
+    #subject:  'New submission!'
+    #submit:   'Say Hello'
+    #ajax:
+    #  sending:  'sending..'
+    #  sent:     'Message sent!'
+    #  error:    'Error!'
+  #thanks: 'Thanks for contacting us. We will reply as soon as possible.'
   og_locale: 'en_US'
 
 # Build settings
-markdown:     kramdown
+markdown: kramdown
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
-permalink:    pretty
-paginate:     4
+permalink: pretty
+paginate: 3
 sass:
   style: compressed
 plugins:
